rest-frontend: fix alignment of error notifications

--- a/src/tools/rest-frontend/resources/assets/skin/base/theme.less
+++ b/src/tools/rest-frontend/resources/assets/skin/base/theme.less
@@ -101,6 +101,11 @@ div.ui-notification div.alert h4.ui-notification-title {
     display: inline-block;
 }
 
+div.ui-notification.error {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 div.error {
     margin-top: 100px;
     margin-bottom: 50px;
